Syncing new local project with existing GitHub repo
