# apps/auth-service/src/controller/auth.controller.ts
@@ -1,14 +1,14 @@
 import { NextFunction, Request, Response } from "express";
+import bcrypt from "bcryptjs";
 import {
   checkOtpRestrictions,
   sendOtp,
   trackOtpRequest,
   validateRegistrationData,
+  verifyOtp,
 } from "../utils/auth.helper";
 import prisma from "../../../../packages/libs/prisma";
 import { ValidationError } from "../../../../packages/error-handler";
-;
-
 // Register a new user
 
 export const userRegistration = async (
@@ -32,6 +32,39 @@ export const userRegistration = async (
     res.status(200).json({
       message: "OTP Sent. Please check your email to verify your account.",
     });
+  } catch (error) {
+    return next(error);
+  }
+};
+
+// varify user otp
+
+export const verifyUser = async (
+  req: Request,
+  res: Response,
+  next: NextFunction
+) => {
+  try {
+    const { email, otp, password, name } = req.body;
+    if (!email || !otp || !password || !name) {
+      return next(new ValidationError("all fields are required"));
+    }
+    const exisistingUser = await prisma.users.findUnique({ where: { email } });
+    if (exisistingUser) {
+      return next(new ValidationError("User already exists with this email"));
+    }
+    await verifyOtp(email, otp, next);
+    const hashedPassword = await bcrypt.hash(password, 10);
+    await prisma.users.create({
+      data: {
+        email,
+        name,
+        password: hashedPassword,
+      },
+    });
+    res
+      .status(201)
+      .json({ success: true, message: "User registered successfully" });
   } catch (error) {
     return next(error);
   }
