# apps/auth-service/src/main.ts
@@ -1,6 +1,5 @@
 import express from "express";
 import cors from "cors";
-
 import cookieParser from "cookie-parser";
 import router from "./routes/auth.router";
 import swaggerUi from "swagger-ui-express";
@@ -19,24 +18,24 @@ app.use(
 
 app.use(express.json());
 app.use(cookieParser());
-app.use(errorMiddleware);
 
+// Swagger documentation
 app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
-
-app.use("/api", router);
-
-app.get("/", (req, res) => {
-  res.send({ message: "Hello API From Auth Service" });
-});
 
 app.get("/docs", (req, res) => {
   res.json(swaggerDocument);
 });
 
+// API routes
+app.use("/api", router);
+
+// Error middleware MUST be LAST
+app.use(errorMiddleware);
+
 const port = process.env.PORT || 6001;
 const server = app.listen(port, () => {
   console.log(`Listening at http://localhost:${port}/`);
-  console.log(`Swagger at http://localhost:${port}/docs`);
+  console.log(`Swagger at http://localhost:${port}/api-docs`);
 });
 
 server.on("error", (error) => console.log("Server error: ", error));
